--- a/site/static/index.css
+++ b/site/static/index.css
@@ -5,7 +5,8 @@ body {
   display: flex;
   flex-direction: row;
   min-width: 100vw;
-  min-height: 100vh;
+  height: 100vh;
+  overflow: hidden;
   background-color: #f7f7f7;
   font-size: 15px;
 }
@@ -13,11 +14,10 @@ body {
 nav {
   position: relative;
   width: 250px;
-  height: 100vh;
   box-sizing: border-box;
   padding: 10px 0;
   border-right: 1px solid #ddd;
-  overflow: scroll;
+  overflow: auto;
 }
 
 nav > h1 {
@@ -68,6 +68,7 @@ main {
   position: relative;
   padding: 20px;
   flex: 1;
+  overflow: auto;
 }
 
 main > ul {
