--- a/src/theme/basic.css
+++ b/src/theme/basic.css
@@ -11,6 +11,8 @@
   --text-color: #44474d;
 
   --background-color: #efefef;
+  --background-color-darken: #d5d0c4;
+  --background-color-lighten: #f7f7f7;
 }
 
 /* Color Theme Swatches in Hex */
