--- a/src/extensions/ext-selectbox.css
+++ b/src/extensions/ext-selectbox.css
@@ -13,22 +13,22 @@ ext-selectbox > .ext-selectbox-container {
   align-items: center;
   padding: 10px 15px;
   gap: 10px;
-  background-color: #fff;
-  border: 1px solid var(--border-color, #333);
+  background-color: var(--ext-background-color);
+  border: 1px solid var(--ext-border-color, #333);
   border-radius: 10px;
   box-sizing: border-box;
   transition:
     border 0.2s,
     color 0.2s;
-  color: var(--text-color, #333);
+  color: var(--ext-text-color);
 }
 
 ext-selectbox > .ext-selectbox-container.focused {
-  border: 1px solid var(--primary-color, #000);
+  border: 1px solid var(--ext-border-color, #333);
 }
 
 ext-selectbox > .ext-selectbox-container.focused > i {
-  color: var(--primary-color, #000);
+  color: var(--ext-text-color, #000);
 }
 
 ext-selectbox > .ext-selectbox-container > span {
@@ -54,14 +54,14 @@ ext-selectbox > .ext-selectbox-item-container {
   flex-direction: column;
   padding: 8px 0;
   gap: 5px;
-  background-color: #fff;
-  border: 1px solid var(--border-color, #333);
+  background-color: var(--ext-background-color);
+  border: 1px solid var(--ext-border-color, #333);
   border-radius: 10px;
   box-sizing: border-box;
   transition:
     border 0.2s,
     color 0.2s;
-  color: var(--text-color, #333);
+  color: var(--ext-text-color, #333);
   cursor: pointer;
 }
 
@@ -72,5 +72,5 @@ ext-selectbox > .ext-selectbox-item-container > div {
 }
 
 ext-selectbox > .ext-selectbox-item-container > div:hover {
-  background-color: var(--background-color-darken, #ddd);
+  background-color: var(--ext-background-color-darken, #000);
 }
