--- a/src/extensions/ext-button.css
+++ b/src/extensions/ext-button.css
@@ -1,13 +1,14 @@
 ext-button {
   position: relative;
   display: block;
+  width: fit-content;
   user-select: none;
   -webkit-user-select: none;
 }
 
 ext-button > .ext-button-container {
   position: relative;
-  width: fit-content;
+  width: 100%;
   height: 100%;
   outline: 0;
   border: 0;
