--- a/src/extensions/ext-selectbox.css
+++ b/src/extensions/ext-selectbox.css
@@ -24,7 +24,7 @@ ext-selectbox > .ext-selectbox-container {
 }
 
 ext-selectbox > .ext-selectbox-container.focused {
-  border: 1px solid var(--ext-border-color, #333);
+  border: 1px solid var(--ext-border-color-extra-darken, #333);
 }
 
 ext-selectbox > .ext-selectbox-container.focused > i {
@@ -67,7 +67,7 @@ ext-selectbox > .ext-selectbox-item-container {
 
 ext-selectbox > .ext-selectbox-item-container > div {
   position: relative;
-  width: calc(100% - 30px);
+  width: 100%;
   padding: 5px 15px;
 }
 
